--- a/package.json
+++ b/package.json
@@ -6,8 +6,11 @@
     "@testing-library/jest-dom": "^5.11.9",
     "@testing-library/react": "^11.2.3",
     "@testing-library/user-event": "^12.6.2",
+    "emoji-picker-react": "^3.4.2",
+    "mr-emoji": "^1.1.4",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
+    "react-linkify": "^1.0.0-alpha",
     "react-scripts": "4.0.1",
     "web-vitals": "^0.2.4"
   },
